fixed margin and gaps for the cards

--- a/style.css
+++ b/style.css
@@ -30,8 +30,8 @@
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-template-rows: repeat(auto-fit, 1fr);
 
-    margin: 70px auto;
-    grid-gap: 50px;
+    margin: 40px auto;
+    grid-gap: 80px;
     width: 90vw;
 }
 
@@ -114,7 +114,7 @@
     justify-content: center;
     align-items: center;
 
-    margin: 20px;
+    margin: 20px 0 0 0;
     font-size: 5rem;
     height: 80px;
     width: 80px;
@@ -137,5 +137,6 @@
     background-color: black;
     padding: 12px;
     height: 6vh;
+    color: white;
 }
 
